--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 </head>
 
-<video poster="bomi_static_image.jpg" id="bgvid" playsinline autoplay muted loop>
+<video poster="eh5v.files/html5video/620694682.jpg" id="bgvid" playsinline autoplay muted loop>
   <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-<source src="BOMI「A_B」MV.webm" type="video/webm">
+<source src="eh5v.files/html5video/620694682.webm" type="video/webm">
 </video>
 <div id="polina">
 <h1>The 4MC</h1>
@@ -25,27 +25,6 @@
 </div>
 
 
-<audio id="background_audio" autoplay>
-  <source src="BOMI「A_B」MV.mp3" />
-</audio> 
 
-<a href="#" class="speaker" id="mute">
-  <span></span>
-
-</a>
-<script>$('.speaker').click(function(e) {
-  e.preventDefault();
-
-	$(this).toggleClass('mute');
-});</script>
-
-<script>var audio = document.getElementById('background_audio');
-
-document.getElementById('mute').addEventListener('click', function (e)
-{
-    e = e || window.event;
-    audio.muted = !audio.muted;
-    e.preventDefault();
-}, false);</script>
 	</body>
 </html>
